--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ html{
 .app__videos{
   border: 1px solid black;
   height: 800px;
+  max-height: 100vh;
   width: 80%;
   max-width: 500px;
   border-radius: 20px;
